syntax = "proto3";

package pb;

option go_package = "github.com/casnerano/go-url-shortener/internal/app/server/grpc/proto";

import "google/protobuf/empty.proto";

message GetShortURLRequest {
  string short_url = 1;
}

message GetShortURLResponse {
  string result = 1;
}

message GetUserHistoryShortURLResponse {
  message Item {
    string short_url = 1;
    string original_url = 2;
  }
  repeated Item items = 1;
}

message GetStatsShortURLResponse {
  int64 links = 1;
  int64 users = 2;
}

message CreateShortURLRequest {
  string url = 1;
}

message CreateShortURLResponse {
  string result = 1;
}

message CreateBatchRequest {
  message Item {
    string correlation_id = 1;
    string original_url = 2;
  }
  repeated Item items = 1;
}

message CreateBatchResponse {
  message Item {
    string correlation_id = 1;
    string short_url = 2;
  }
  repeated Item items = 1;
}

message DeleteBatchRequest {
  repeated string items = 1;
}

service Shortener {
  rpc Get(GetShortURLRequest) returns (GetShortURLResponse);
  rpc GetUserHistory(google.protobuf.Empty) returns (GetUserHistoryShortURLResponse);
  rpc GetStats(google.protobuf.Empty) returns (GetStatsShortURLResponse);
  rpc CreateURL(CreateShortURLRequest) returns (CreateShortURLResponse);
  rpc CreateBatch(CreateBatchRequest) returns (CreateBatchResponse);
  rpc DeleteBatch(DeleteBatchRequest) returns (google.protobuf.Empty);
}
